fixed horizantal overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,28 @@
   scroll-behavior: smooth
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html {
-  padding-right: 0px !important;
+  /* this makes sure the padding and the border is included in the box sizing */
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
+
+html body {
+  padding: 0;
+  margin: 0;
+  overflow-y: inherit;
+}
+
+.App {
+  height: 100vh;
+  width: 100vw;
+  max-width: 900px;
+  padding: 1rem;
+  background-color: lightpink;
 }
